Update index and style

--- a/index.html
+++ b/index.html
@@ -78,31 +78,30 @@
           <tbody class="article__table-body">
             <tr class="article__table-row">
               <td class="article__table-cell" scope="row">Calories</td>
-              <td class="article__table-cell">277kcal</td>
+              <td class="article__table-cell article__table-cell--red">277kcal</td>
             </tr>
             <tr class="article__table-row">
               <td class="article__table-cell" scopre="row">Carbs</td>
-              <td class="article__table-cell">0g</td>
+              <td class="article__table-cell article__table-cell--red">0g</td>
             </tr>
             <tr class="article__table-row">
               <td class="article__table-cell" scopre="row">Protein</td>
-              <td class="article__table-cell">20g</td>
+              <td class="article__table-cell article__table-cell--red">20g</td>
             </tr>
             <tr class="article__table-row">
               <td class="article__table-cell" scope="row">Fat</td>
-							<td class="article__table-cell">22g</td>
+							<td class="article__table-cell article__table-cell--red">22g</td>
             </tr>
-            
           </tbody>
         </table>
       </section>
     </div>
   </article>
 
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  <footer class="footer">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="footer__link">Frontend Mentor</a>. 
+    Coded by <a href="#" target="_blank" class="footer__link">Abel Valdivia</a>.
+  </footer>
 </body>
 
 </html>
